# miscellaneous

camera_preview/: Makefile  camera_preview.c  camera_util.c  camera_util.h  camera_util_jpeg.c  camera_util_jpeg.h  mfg_logger.c  mfg_logger.h
data_structure_in_c/fibonacci/: Makefile  fibonacci.c
data_structure_in_c/func_point/: Makefile  func_point.c
data_structure_in_c/logs/: logs  logs.c
data_structure_in_c/mfg_func/: Makefile.am  Makefile.in  configure  configure.ac
data_structure_in_c/mfg_func/common/: Makefile.am  Makefile.in  main.c  mfg_framework.c  mfg_func  mfg_func_queue.c
data_structure_in_c/mfg_func/include/: mfg_framework.h  mfg_func.h  mfg_queue.h
data_structure_in_c/mfg_func/mfg_funcs/: Makefile.am  Makefile.in
data_structure_in_c/mfg_func/mfg_funcs/AA/: Makefile.am  Makefile.in  mfg_AA.c  mfg_AA_funcs.h
data_structure_in_c/queue/: Makefile  linked_list.c  queue.c
flash_cmd/: Makefile  flash_cmd.c  partition.txt
logs_collector/: Makefile  common_funcs.c  common_funcs.h  logger.c  logger.h  logs_collector.c  logs_collector.conf  logs_collector.h  logs_collector_app_name.h  logs_collector_conf.c  logs_collector_conf.h  logs_collector_gtk.c  logs_collector_gtk.h  logs_collector_ver.c  logs_collector_ver.h  mounts_funcs.c  mounts_funcs.h  tar_bz2_funcs.c  tar_bz2_funcs.h  zip_funcs.c  zip_funcs.h
passwd_gen/: Makefile  passwd_gen.c
persist_logger/: Makefile  persist_logger.c
tar_dir/: Makefile  z_compress.c
